# YPL2026

./: .gitignore  README.md  claudeGUIController.py  inst_test_visa.py  main.py  pyproject.toml  textController.py
data/: Dev1_current_20260508_184546.csv  Dev1_current_20260511_135315.csv  Dev1_current_20260511_141938.csv  Dev1_current_20260511_142103.csv  Dev1_current_20260511_144331.csv  Dev1_current_20260511_144350.csv  Dev1_current_20260511_144434.csv  Dev1_current_20260511_144617.csv  Dev1_current_20260511_150527.csv  Dev1_current_20260511_150605.csv  Dev1_current_20260511_151455.csv  Dev1_current_20260511_151521.csv  Dev2_voltage_20260508_183259.csv  Dev2_voltage_20260508_183701.csv  Dev2_voltage_20260511_134924.csv  Dev2_voltage_20260512_173052.csv  Dev2_voltage_20260512_173459.csv  Dev2_voltage_20260512_173725.csv  Dev2_voltage_20260512_174221.csv  Dev2_voltage_20260513_143732.csv  Dev2_voltage_20260513_154602.csv  Dev2_voltage_20260513_154611.csv  Dev2_voltage_20260514_141351.csv  ao_sweep_coredaq_20260716_191046.csv  ao_sweep_coredaq_20260717_170206.csv  ao_sweep_coredaq_20260720_162757.csv  ao_sweep_coredaq_20260720_164508.csv  global_recording_20260630_181829.csv  santec_fast_sweep_coredaq_20260709_182749.csv  santec_fast_sweep_coredaq_20260710_170416.csv  santec_fast_sweep_coredaq_20260713_115324.csv  santec_fast_sweep_coredaq_20260713_143509.csv  santec_fast_sweep_coredaq_20260714_172301.csv  santec_fast_sweep_coredaq_20260717_163214.csv  santec_fast_sweep_coredaq_20260717_164549.csv  santec_sweep_coredaq_20260702_142334.csv
examples/: BufferedAI.py  Mux.py  (+13 more)
(+54 files in other folders)
