[project]
name = "gui-new32"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "numpy==1.26.4",
    "pyqt6>=6.11.0",
    "ueidaq-np1",
    "pyqtgraph>=0.14.0",
    "matplotlib>=3.11.0",
    "pyserial>=3.5",
    "pyvisa>=1.16.2",
    "pyvisa-py>=0.8.1",
    "moku>=4.2.1.1",
    "nidaqmx>=1.5.0",
]

[tool.uv.sources]
# Absolute path on purpose: this points at the UEI Framework installer's own
# install location (fixed by that installer, not by this project's folder
# depth). A relative path here previously broke `uv sync` outright when the
# project moved into OneDrive and gained an extra directory level.
ueidaq-np1 = { path = "C:/Program Files (x86)/UEI/Framework/Python/UeiDaq_np1-5.2.0-cp312-abi3-win_amd64.whl" }
